--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/mpareja/node-bucky",
   "devDependencies": {
+    "chai": "^1.10.0",
     "istanbul": "^0.3.5",
     "jslint": "^0.7.2",
     "mocha": "^2.1.0",
